Added Gradle task to run the program and make it crash